# task-flow-api

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/api/: client.ts  tasks.ts
frontend/src/components/: TaskForm.module.css  TaskForm.tsx  TaskItem.module.css  TaskItem.tsx
frontend/src/types/: task.ts
migrations/: env.py
migrations/versions/: 95cab0da1b5a_initial_migration_create_tasks_table.py
src/: main.py
src/api/v1/: tasks.py
src/core/: config.py  exceptions.py  logging.py
src/db/: base.py  session.py
src/models/: __init__.py  task.py
src/repositories/: task.py
src/schemas/: task.py
src/services/: task.py
tests/: conftest.py  test_tasks.py
