[tool.poetry]
name = "task-flow-api"
version = "0.1.0"
description = "High-performance Async REST API for Task Management"
authors = ["Muhammet Suhangulyyev <muhammet.jkl2.suhanguylev@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.12.0"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.44"
alembic = "^1.17.2"
asyncpg = "^0.31.0"
greenlet = "^3.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.0"
black = "^26.1.0"
isort = "^7.0.0"
mypy = "^1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
